--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+.bounce-link2 {
+  animation: bounce-animation 0.5s ease-in-out infinite;
+  animation-delay: 0s;
+  animation-duration: 4s; /* Total cycle: 1s bounce + 5s wait */
+}
+
+@keyframes bounce-animation {
+  0%, 10% {
+    transform: translateY(0px);
+  }
+  5% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.bounce-link {
+  animation: bounce-animation 0.5s ease-in-out infinite;
+  animation-delay: 0s;
+  animation-duration: 5s; /* Total cycle: 1s bounce + 5s wait */
+}
+
+@keyframes bounce-animation {
+  0%, 10% {
+    transform: translateY(0px);
+  }
+  5% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.bounce-link3 {
+  animation: bounce-animation 0.5s ease-in-out infinite;
+  animation-delay: 0s;
+  animation-duration: 3s; /* Total cycle: 1s bounce + 5s wait */
+}
+
+@keyframes bounce-animation {
+  0%, 10% {
+    transform: translateY(0px);
+  }
+  5% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
