errors and regsiter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,3 +64,12 @@ body {
     transform: translateY(0px);
   }
 }
+
+input:focus {
+  outline: none;
+}
+
+input {
+  border: 1px solid rgb(119, 118, 118);
+  padding: 4px;
+}
